force-app/main/default/objects/DisclosureTemplate__c/DisclosureTemplate__c.object-meta.xml
<CustomObject>
    <description>Object to store all disclosure templates</description>
    <label>Disclosure Template</label>
    <nameField>
        <label>Disclosure Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclosure Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>