force-app/main/default/objects/DisclosureTemplate__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Template code</description>
    <displayFormat>Disc-{000}</displayFormat>
    <label>Code</label>
    <type>AutoNumber</type>
</CustomField>