force-app/main/default/objects/DisclosureTemplate__c/fields/DocumentName__c.field-meta.xml
<CustomField>
    <fullName>DocumentName__c</fullName>
    <description>Document Name of static or Visualforce Page</description>
    <label>Document Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>