force-app/main/default/objects/DisclosureTemplate__c/fields/LongDescipription__c.field-meta.xml
<CustomField>
    <fullName>LongDescipription__c</fullName>
    <description>Long Descipription about the template</description>
    <label>Long Descipription</label>
    <length>40</length>
    <type>Text</type>
</CustomField>