force-app/main/default/objects/DisclosureTemplate__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <description>Short Description about the template</description>
    <label>Short Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>