force-app/main/default/objects/DisclosureTemplate__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL when the document type is URL</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>